# CONTAIN

./: .gitignore  CMakeLists.txt  CONTAIN.sln  README.md  physicsEngineQuadTreeTestResults
CONTAIN/: Anim.cpp  Anim.h  Blast.cpp  Blast.h  Blocker.cpp  Blocker.h  BossBurst.cpp  BossBurst.h  BossRush.cpp  BossRush.h  BossSpawn.cpp  BossSpawn.h  BossSplit.cpp  BossSplit.h  BossStream.cpp  BossStream.h  BusNode.cpp  BusNode.h  Button.cpp  Button.h  CONTAIN.vcxproj  CONTAIN.vcxproj.filters  Circle.cpp  Circle.h  CollisionData.cpp  CollisionData.h  CrazyBoi.cpp  CrazyBoi.h  Door.cpp  Door.h  EndObject.cpp  EndObject.h  Enemy.cpp  Enemy.h  EnemyAI.cpp  Entity.cpp  Entity.h  GLOBAL_CONSTANTS.cpp  GLOBAL_CONSTANTS.h  Game.cpp  (+76 more)
CONTAIN_RELEASE/: CONTAIN.ipdb  SAVEDATA.txt
Notes/: Fixing circular referneces in my CONTAIN project
Release-07-04-2020/: CONTAIN.ipdb
UnitTest/: UnitTest.vcxproj  unittest1.cpp
V1forTesting/: Test.exp  Test.lib  UnitTest.exp  UnitTest.lib
extlib/: CMakeLists.txt
extlib/SFML-2.5.1/cmake/Modules/: FindVorbis.cmake
extlib/SFML-2.5.1/src/SFML/Audio/: AudioDevice.cpp
include/CONTAIN/: Circle.h  EnemyAI.h  GLOBAL_CONSTANTS.h  Game.h  GameRenderer.h  InfoPopUp.h  LevelGenerator.h  Material.h  Menu.h  Physics.h  PlayerController.h  Polygon.h  QuadTree.h  RESOURCES.h  RigidBody.h  SaveData.h  Sector.h  SettingsMenu.h  Shape.h  TextBox.h  Transform.h  TuteLib.h  YouWonMenu.h
sounds2Try/ArcadeSoundFX/: _readme_and_license.txt
src/: Button.cpp  Circle.cpp  CollisionData.cpp  EnemyAI.cpp  Entity.cpp  GLOBAL_CONSTANTS.cpp  Game.cpp  GameRenderer.cpp  HeadsUpDisplay.cpp  InfoPopUp.cpp  Level.cpp  LevelGenerator.cpp  MassData.cpp  Material.cpp  Math.cpp  Menu.cpp  Physics.cpp  PlayerController.cpp  Polygon.cpp  QuadTree.cpp  RESOURCES.cpp  Rectangle.cpp  ResourcePath.mm  RigidBody.cpp  SaveData.cpp  Sector.cpp  SettingsMenu.cpp  Shape.cpp  TextBox.cpp  Transform.cpp  TuteLib.cpp  UpgradeMenu.cpp  YouLostMenu.cpp  YouWonMenu.cpp  main.cpp
test/: unittest1.cpp
